# src/Routes/blogPost.route.js
@@ -1,9 +1,12 @@
-const BlogPost  = require('../controllers/blog_posts.controller');
+const blogController  = require('../controllers/blog_posts.controller');
 
 const router = require('express').Router();
 
-router.get('/',BlogPost.GetAllPost)
-router.post('/createPost',BlogPost.CreatePost)
+router.get('/', blogController.GetAllPost);
+router.post('/create', blogController.CreatePost);
+router.get('/getpost/:id', blogController.GetSinglePost);
+router.patch('/update/:id', blogController.UpdatePost);
+router.delete('/delete/:id', blogController.DeletePost);
 
 
 
